<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>AppChallenge2021</groupId>
  <artifactId>AppChallenge2021</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>relearn</name>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <!--  
    <resources>
      <resource>
        <directory>src/resources</directory>
      </resource>
    </resources>
    -->
    <plugins>
    
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>
      
      <plugin>
	    <artifactId>maven-assembly-plugin</artifactId>
	    <executions>
	        <execution>
	        	<id>make-assembly</id>
	            <phase>package</phase>
	            <goals>
	                <goal>single</goal>
	            </goals>
	            <configuration>
	                <archive>
	                <manifest>
	                    <mainClass>
	                       base.RealMain
	                    </mainClass>
	                </manifest>
	                </archive>
	                <descriptorRefs>
	                    <descriptorRef>jar-with-dependencies</descriptorRef>
	                </descriptorRefs>
	            </configuration>
	        </execution>
	    </executions>
	  </plugin>
      
    </plugins>
    
  </build> 
  
  <dependencies>
  
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>11.0.2</version>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
	<dependency>
	    <groupId>org.openjfx</groupId>
	    <artifactId>javafx-web</artifactId>
	    <version>11.0.2</version>
	</dependency>
	
	<dependency>
	  <groupId>org.controlsfx</groupId>
	  <artifactId>controlsfx</artifactId>
	  <version>11.1.0</version>
	</dependency>
	
  </dependencies>
  
</project>